[build-system]
requires = ["setuptools>=57.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
src = ["src"]
fix = true
target-version = "py38"
select = [
  "B",
  "C4",
  "I",
  "RUF",
  "T20",
  "TID",
  "UP",
]

[tool.ruff.per-file-ignores]
"tests/**" = ["RUF012"]

[tool.ruff.isort]
known-first-party = ["src/"]
combine-as-imports = true
