[metadata]
name = django-bananas
description = Django Bananas - Django extensions the monkey way
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/5monkeys/django-bananas
version = attr: bananas.__version__
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Django
license = MIT License
license_file = LICENSE

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.6
include_package_data = True
exclude =
    tests
    _*
    example
zip_safe = False
install_requires =
    Django>=2.2
    typing-extensions>=3.7.4.3
    drf-yasg>=1.20.0

[options.packages.find]
where = src

[options.extras_require]
drf =
    djangorestframework>=3.10
    drf-yasg>=1.20.0
test =
    tox
    coverage[toml]
dev =
    mypy
    types-setuptools
    django-stubs
    djangorestframework-stubs
    pytest
    pytest-cov
    pytest-django
    pytest-mypy-plugins
    pre-commit

[options.package_data]
bananas = py.typed
