[metadata]
name = django-bananas
description = Django Bananas - Django extensions the monkey way
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/5monkeys/django-bananas
version = attr: bananas.__version__
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Django
license = MIT License
license_file = LICENSE

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.6
include_package_data = True
exclude =
    tests
    _*
    example
zip_safe = False
install_requires =
    Django>=2.2
    typing-extensions>=3.7.4.3
    drf-yasg>=1.20.0

[options.packages.find]
where = src

[options.extras_require]
drf =
    djangorestframework>=3.10
    drf-yasg>=1.20.0
test =
    tox
    coverage
dev =
    mypy
    types-setuptools
    django-stubs
    djangorestframework-stubs
    pytest-mypy-plugins
    pre-commit

[options.package_data]
bananas = py.typed

[coverage:run]
source = src
branch = True
parallel = True

[coverage:report]
fail_under = 90
skip_covered = True
show_missing = True

# Regex expressions for lines excluded from report
exclude_lines =
    pragma: no cover
    if __name__ == .__main__.:
    ^\s*\.\.\.
    if TYPE_CHECKING:
    raise NotImplementedError

[mypy]
python_version = 3.8
show_error_codes = True
pretty = True
files = src,tests,runtests.py,setup.py

no_implicit_reexport = True
no_implicit_optional = True
strict_equality = True
strict_optional = True
check_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_defs = True
ignore_missing_imports = False

warn_unused_configs = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
warn_unreachable = True

plugins =
    mypy_django_plugin.main

[mypy.plugins.django-stubs]
django_settings_module = tests.project.settings

[mypy-tests.tests.*]
disallow_untyped_defs = False

[mypy-test.support]
ignore_missing_imports = True

[mypy-drf_yasg.*]
ignore_missing_imports = True
